Stuff to try and get android studios to work

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">GreenFlag</string>
+
+    <string name="activity_main_policy_information">Policy information</string>
+    <string name="activity_main_greenflag_customers_can_create_an_account_to_access">GreenFlag customers can create an account to access</string>
+    <string name="activity_main_tv_1">Car health updates</string>
+    <string name="activity_main_btn">Create an account</string>
+    <string name="activity_main_tv_2">Request a rescue online</string>
+
+    <string name="create_account_criteria">
+        Your password should have a minimum of 8 characters and contain at least one number, one uppercase and one lower case letter. You can use special characters."
+    </string>
+    <string name="create_account_hint">See criteria below</string>
 </resources>
