--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="not_specified">Not Specified</string>
     <string name="postal_address_opt">Postal Address (Opt)</string>
     <string name="save">save</string>
+    <string name="gender">Gender</string>
     <string-array name="info_countries_array">
         <item>Not-Specified</item>
         <item>Malaysia</item>
